unpackaged/main/default/objects/Workforce_Grade__c/Workforce_Grade__c.object-meta.xml
<CustomObject>
    <label>Workforce Salaries Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Salary Grade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workforce Salaries Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>