unpackaged/main/default/objects/Workforce_Grade__c/fields/Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Gross_Salary__c</fullName>
    <label>Gross Salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>