unpackaged/main/default/objects/Workforce_Grade__c/fields/Insurance_Cost_Abu_Dhabi__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Cost_Abu_Dhabi__c</fullName>
    <label>Insurance Cost (Abu Dhabi)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>